--- a/gpu.html
+++ b/gpu.html
@@ -25,7 +25,7 @@
         <div class="tester" style="display: block;text-align: center;">
             <div class="top">
                 <p style="margin-top:3vh;color:gray;margin-bottom:-15px;">Your GPU</p>
-                <h1 id="gpu-name" style="font-size: 40px;">NVIDIA GeForce RTX 4090</h1>
+                <h1 id="gpu-name" style="font-size: 40px;">:( Couldn't detect a GPU.</h1>
             </div>
             <div class="bottom">
                 <div class="properties" style="width:100%;">
