--- a/gpu.html
+++ b/gpu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Speaker Tester - Hardware Tester</title>
+    <title>GPU Tester - Hardware Tester</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/e4807bb23d.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
