Update 1: Controller Tester!

--- a/gpu.html
+++ b/gpu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GPU Tester - Hardware Tester</title>
+    <title>Speaker Tester - Hardware Tester</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/e4807bb23d.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
@@ -19,13 +19,14 @@
             <a href="webcam.html">Webcam</a>
             <a href="speaker.html">Speakers</a>
             <a class="selected" href="gpu.html">GPU</a>
+            <a href="controller.html">Controller</a>
         </nav>
     </center>
     <center>
         <div class="tester" style="display: block;text-align: center;">
             <div class="top">
                 <p style="margin-top:3vh;color:gray;margin-bottom:-15px;">Your GPU</p>
-                <h1 id="gpu-name" style="font-size: 40px;">:( Couldn't detect a GPU.</h1>
+                <h1 id="gpu-name" style="font-size: 40px;">NVIDIA GeForce RTX 4090</h1>
             </div>
             <div class="bottom">
                 <div class="properties" style="width:100%;">
