--- a/index.html
+++ b/index.html
@@ -16,25 +16,30 @@
             <a href="microphone.html">Microphone</a>
             <a href="webcam.html">Webcam</a>
             <a href="speaker.html">Speakers</a>
-            <a href="GPU.html">GPU</a>
+            <a href="gpu.html">GPU</a>
+            <a href="controller.html">Controller</a>
         </nav>
     </center>
     <div class="content">
         <div class="test" onclick='window.location.href = "microphone.html";'>
-            <h1>Microphone</h2>
+            <h1>Microphone</h1>
             <p>Check if your microphone is working, and see information related to audio-input devices.</p>
         </div>
         <div class="test" onclick='window.location.href = "webcam.html";'>
-            <h1>Webcam</h2>
+            <h1>Webcam</h1>
             <p>Test your webcam connected to the device, and check information about it like resolution, etc.</p>
         </div>
         <div class="test" onclick='window.location.href = "speaker.html";'>
-            <h1>Speakers</h2>
+            <h1>Speakers</h1>
             <p>Sometimes, your speakers don't work. Useful for checking whether an audio device works or not.</p>
         </div>
         <div class="test" onclick='window.location.href = "gpu.html";'>
-            <h1>GPU</h2>
+            <h1>GPU</h1>
             <p>Shows information about the GPU in the device. Useful for checking the specs, etc.</p>
+        </div>
+        <div class="test" onclick='window.location.href = "controller.html";'>
+            <h1>Controller</h1>
+            <p>Plug in a controller to check if everything's working fine, so you don't lose another game.</p>
         </div>
     </div>
     <div class="footer">
