--- a/speaker.html
+++ b/speaker.html
@@ -18,7 +18,8 @@
             <a href="microphone.html">Microphone</a>
             <a href="webcam.html">Webcam</a>
             <a class="selected" href="speaker.html">Speakers</a>
-            <a href="GPU.html">GPU</a>
+            <a href="gpu.html">GPU</a>
+            <a href="controller.html">Controller</a>
         </nav>
     </center>
     <center>
