--- a/controller.html
+++ b/controller.html
@@ -27,7 +27,7 @@
             <div class="left" style="width:50%;">
                 <div class="top-left">
                     <div class='title'><i class="fa-solid fa-gamepad"></i> <h1>Controller</h1></div>  
-                    <p>Plug in a controller to check if everything's working fine, so you don't lose another game.</p>
+                    <p>Plug in a controller to check if everything is working fine, so you don't lose another game.</p>
                 </div>
                 <div class="bottom-left">
                     <div class="properties">
