--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="speaker.html">Speakers</a>
             <a href="gpu.html">GPU</a>
             <a href="controller.html">Controller</a>
+            <a href="midi.html">MIDI</a>
         </nav>
     </center>
     <div class="content">
@@ -40,6 +41,10 @@
         <div class="test" onclick='window.location.href = "controller.html";'>
             <h1>Controller</h1>
             <p>Plug in a controller to check if everything's working fine, so you don't lose another game.</p>
+        </div>
+        <div class="test" onclick='window.location.href = "midi.html";'>
+            <h1>MIDI</h1>
+            <p>Check if your MIDI devices are working properly, and see information related to them.</p>
         </div>
     </div>
     <div class="footer">
