--- a/microphone.html
+++ b/microphone.html
@@ -20,6 +20,7 @@
             <a href="speaker.html">Speakers</a>
             <a href="gpu.html">GPU</a>
             <a href="controller.html">Controller</a>
+            <a href="midi.html">MIDI</a>
         </nav>
     </center>
     <center>
